--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,16 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    :hover {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
 }
 
 code {
